WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168402
JSC: fix compilation errors for MIPS
https://bugs.webkit.org/show_bug.cgi?id=168402
Summary
JSC: fix compilation errors for MIPS
Guillaume Emont
Reported
2017-02-15 18:38:32 PST
This is to introduce a patch that fixes misceallaneous issues for MIPS compilation (small missing bits).
Attachments
Patch
(3.60 KB, patch)
2017-02-15 19:27 PST
,
Guillaume Emont
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Guillaume Emont
Comment 1
2017-02-15 19:27:36 PST
Created
attachment 301689
[details]
Patch Patch by Suresh Kumar with small modifications by myself.
Guillaume Emont
Comment 2
2017-02-15 19:29:19 PST
(In reply to
comment #1
)
> Created
attachment 301689
[details]
> Patch > > Patch by Suresh Kumar with small modifications by myself.
Note that there is a style error in the order of includes in MacroAssemblerMIPS.h. I don't know how to solve it since compilation fails if the includes are in the opposite order. I imagine this means we miss an include somewhere, but I could not find which one so far.
WebKit Commit Bot
Comment 3
2017-02-15 19:30:16 PST
Attachment 301689
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/assembler/MacroAssemblerMIPS.h:32: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Guillaume Emont
Comment 4
2017-02-16 11:15:41 PST
(In reply to
comment #2
)
> Note that there is a style error in the order of includes in > MacroAssemblerMIPS.h. I don't know how to solve it since compilation fails > if the includes are in the opposite order. I imagine this means we miss an > include somewhere, but I could not find which one so far.
Note that MacroAssemblerX86Common.h has the same non-alphabetical order of includes.
Guillaume Emont
Comment 5
2017-02-16 18:30:15 PST
Just fount that the header issue is due to AbstractMacroAssembler.h not including wtf/Vector.h, which means in some cases its use of Vector ends up using the template in wtf/Forward.h which requires 4 arguments. Will send a patch for that later tonight or tomorrow.
Guillaume Emont
Comment 6
2017-02-17 16:34:35 PST
I proposed a patch for the header issue in
https://bugs.webkit.org/show_bug.cgi?id=168537
but it seems to create compilation issues on Mac so I think I need to examine that further.
Guillaume Emont
Comment 7
2017-03-13 16:54:20 PDT
After further investigation, I don't think there is an easy fix for the header issue. Can this patch be accepted despite this issue?
Mark Lam
Comment 8
2017-03-13 17:05:48 PDT
Comment on
attachment 301689
[details]
Patch rs=me
WebKit Commit Bot
Comment 9
2017-03-13 17:34:32 PDT
Comment on
attachment 301689
[details]
Patch Clearing flags on attachment: 301689 Committed
r213881
: <
http://trac.webkit.org/changeset/213881
>
WebKit Commit Bot
Comment 10
2017-03-13 17:34:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug