JSC: fix compilation errors for MIPS https://bugs.webkit.org/show_bug.cgi?id=168402

Patch by SKumarMetro <s.kumar@metrological.com> on 2017-03-13
Reviewed by Mark Lam.

* assembler/MIPSAssembler.h:
(JSC::MIPSAssembler::fillNops):
Added.
* assembler/MacroAssemblerMIPS.h:
Added MacroAssemblerMIPS::numGPRs and MacroAssemblerMIPS::numFPRs .
* bytecode/InlineAccess.h:
(JSC::InlineAccess::sizeForPropertyAccess):
(JSC::InlineAccess::sizeForPropertyReplace):
(JSC::InlineAccess::sizeForLengthAccess):
Added MIPS cases.

Canonical link: https://commits.webkit.org/186578@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213881 268f45cc-cd09-0410-ab3c-d52691b4dbfc