Source/JavaScriptCore/bytecode/InlineAccess.h
@@ -55,6 +55,8 @@ public:
 #else
         return 52;
 #endif
+#elif CPU(MIPS)
+        return 72;
 #else
 #error "unsupported platform"
 #endif
@@ -75,6 +77,8 @@ public:
 #else
         return 48;
 #endif
+#elif CPU(MIPS)
+        return 72;
 #else
 #error "unsupported platform"
 #endif
@@ -98,6 +102,8 @@ public:
 #else
         size_t size = 32;
 #endif
+#elif CPU(MIPS)
+        size_t size = 56;
 #else
 #error "unsupported platform"
 #endif
